--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: lightblue;
+  background-color: #f4f4f4;
   line-height: 1.6;
 }
 
@@ -90,21 +90,26 @@ footer .social-links a[href*="linkedin"]::before {
 }
 
 .sidebar {
-  background-color: #f4f4f4;
+  background-color: white;
   padding: 15px;
   width: 250px;
   position: fixed;
   top: 100px;
   left: 0;
-  height: 100%;
+  height: calc(100% - 100px); /* Adjusted to take into account the top offset */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
-  z-index: 1000;  /* Ensure sidebar is above other content */
+  z-index: 1000;
+  display: flex;
+  flex-direction: column; /* Ensure items are stacked vertically */
 }
 
 .sidebar-links {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column; /* Stack links vertically */
 }
 
 .sidebar-links li {
